--- a/css/pages/_works.scss
+++ b/css/pages/_works.scss
@@ -119,3 +119,12 @@
     }
   }
 }
+
+@media (max-width: 575.98px) {
+
+  .works-card {
+    // padding: 0 28px;
+    margin-bottom: 24px;
+    width: 100%;
+  }
+}
