--- a/css/layout/_menu.scss
+++ b/css/layout/_menu.scss
@@ -1,10 +1,55 @@
-.menu-section {
+//-------------- 選單按鈕
+.barres {
+  width: 24px;
+  height: 24px;
+  position: relative;
+  right: 0;
+  /* transform: translate(-50%, -50%); */
+  z-index: 99;
+}
+
+.hamburger1,
+.hamburger2 {
+  width: 24px;
+  height: 1px;
+  background-color: $primary-color;
+  content: '';
+  position: absolute;
+  left: 0;
+  transition: 0.5s;
+  z-index: 99;
+}
+
+.hamburger1 {
+  top: 6px;
+}
+
+.hamburger2 {
+  top: 18px;
+}
+
+.barres.active .hamburger1 {
+  top: 0;
+  background-color: white;
+  transform: rotate(45deg);
+}
+
+.barres.active .hamburger2 {
+  top: 0;
+  background-color: white;
+  transform: rotate(135deg);
+}
+
+//-------------- menu
+.menu {
+  left: -100%;
   width: 100%;
   height: 100vh;
   display: flex;
   flex-flow: row nowrap;
   position: fixed;
   background-color: $dark-color;
+  z-index: 20;
 }
 
 //===== 左邊圖片 ===== 
@@ -19,10 +64,9 @@
 .menu-content {
   padding: 60px;
   width: 70%;
-  height: 100%;
+  height: 100vh;
   display: flex;
-  flex-flow: column wrap;
-  justify-content: space-between;
+  position: relative;
 }
 
 //===== 上方連結 ===== 
@@ -30,6 +74,13 @@
   display: flex;
   flex-flow: column wrap;
   justify-content: space-between;
+  position: absolute;
+  top: 60px;
+  left: 60px;
+
+  li {
+    padding-top: 30px;
+  }
 }
 
 .menulink {
@@ -51,9 +102,9 @@
   color: $secondary-color;
 }
 
-//===== 上方連結 ===== 
 //===== 底部contact ===== 
 .menu-bottom-wrap {
+  align-self: flex-end;
   display: flex;
   flex-flow: row wrap;
   justify-content: start;
