--- a/css/main.css
+++ b/css/main.css
@@ -1591,11 +1591,10 @@ input {
 }
 
 @media (max-width: 575.98px) {
-  .art-wrap .w-30,
-  .art-wrap .w-40 {
+  .arts-card {
     width: 100%;
   }
-  .art-wrap .arts-card-4 {
+  .arts-card-4 {
     margin: 0px auto 40px;
   }
 }
@@ -1857,6 +1856,26 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
+@media (max-width: 768.02px) {
+  .work-detail-wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+  }
+  .work-img-wrap {
+    width: 100%;
+  }
+  .work-img-wrap .swiper-container.gallery-top {
+    height: 40vh;
+  }
+  .work-info-wrap {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
+}
+
 .class-title-wrap {
   margin: 10% auto 400px 8%;
   width: 36%;
@@ -1894,7 +1913,7 @@ input[type=number]::-webkit-outer-spin-button {
   background-size: cover;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768.02px) {
   .class-title-wrap {
     margin: 100px 0 40px 0;
     padding: 0px 40px;
@@ -2284,6 +2303,10 @@ input[type=number]::-webkit-outer-spin-button {
           justify-content: flex-end;
 }
 
+.class-bn {
+  margin: 40px 0 0 20px;
+}
+
 .class-bg {
   width: 50%;
   height: 500px;
@@ -2357,9 +2380,83 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 20px 50px;
 }
 
+.courseMobile {
+  display: none;
+}
+
+@media (max-width: 768.02px) {
+  .class-hero {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+  }
+  .class-txt,
+  .class-bn {
+    width: 100%;
+  }
+  .class-bg {
+    margin: 400px 0 0 0;
+    width: 90%;
+    height: 200px;
+  }
+}
+
 @media (max-width: 575.98px) {
-  .classItem {
-    padding: 0 50px;
+  .hrWrapper {
+    display: none;
+  }
+  .courseMobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+    margin-top: -200px;
+  }
+  .courseCard {
+    padding: 50px 40px;
+    margin: 60px auto;
+    width: 90%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    background-color: #E6DFD9;
+    white-space: normal;
+  }
+  .courseCard p,
+  .courseCard h5 {
+    text-align: left;
+  }
+  .courseCard img {
+    margin: 40px auto;
+    width: 280px;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .class-txt h3 {
+    font-size: 24px;
+    padding: 0 0 10px 0;
+  }
+  .class-txt h5 {
+    font-size: 18px;
+    padding: 0 0 10px 0;
+  }
+  .class-bn {
+    margin: 0;
+  }
+  .class-bg {
+    display: none;
   }
 }
 /*# sourceMappingURL=main.css.map */
