--- a/css/pages/_class.scss
+++ b/css/pages/_class.scss
@@ -12,6 +12,10 @@
   justify-content: flex-end;
 }
 
+.class-bn {
+  margin: 40px 0 0 20px;
+}
+
 .class-bg {
   width: 50%;
   height: 500px;
@@ -71,8 +75,78 @@
   }
 }
 
+.courseMobile {
+  display: none;
+}
+
+@media (max-width: 768.02px) {
+  .class-hero {
+    flex-flow: row wrap;
+  }
+
+  .class-txt,
+  .class-bn {
+    width: 100%;
+  }
+
+  .class-bg {
+    margin: 400px 0 0 0;
+    width: 90%;
+    height: 200px;
+  }
+}
+
 @media (max-width: 575.98px) {
-  .classItem {
-    padding: 0 50px;
+  .hrWrapper {
+    display: none;
+  }
+
+  .courseMobile {
+    display: flex;
+    flex-flow: column wrap;
+    margin-top: -200px;
+  }
+
+  .courseCard {
+    padding: 50px 40px;
+    margin: 60px auto;
+    width: 90%;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: flex-start;
+    background-color: $secondary-color;
+    white-space: normal;
+
+    p,
+    h5 {
+      text-align: left;
+    }
+
+    img {
+      margin: 40px auto;
+      width: 280px;
+      align-self: center;
+    }
+  }
+
+  .class-txt {
+
+    h3 {
+      font-size: 24px;
+      padding: 0 0 10px 0;
+    }
+
+    h5 {
+      font-size: 18px;
+      padding: 0 0 10px 0;
+    }
+  }
+
+  .class-bn {
+    margin: 0;
+  }
+
+  .class-bg {
+    display: none;
   }
 }
