--- a/css/pages/_index.scss
+++ b/css/pages/_index.scss
@@ -148,7 +148,14 @@
     margin-right: -40px;
   }
 
+  .arts-section {
+    .titlebox {
+      margin: 0 0 20px 0;
+    }
+  }
+
   .art-l {
+    height: 300px;
     width: 90%;
     background-size: contain;
   }
