--- a/css/main.css
+++ b/css/main.css
@@ -667,6 +667,16 @@ input {
   background-repeat: no-repeat;
 }
 
+@media (max-width: 767.98px) {
+  .slider-control-wrap {
+    display: none;
+    width: 100%;
+    position: absolute;
+    top: calc(100% - 80px);
+    left: calc(100% + 60px);
+  }
+}
+
 .thumbnail {
   overflow: hidden;
 }
