--- a/css/base/_typography.scss
+++ b/css/base/_typography.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;400&family=Roboto:wght@300&display=swap');
 // ========== 中文字體 ========== 
 // 'Noto Serif JP', serif; 明體
 // 300 大部分字體、內文
