mobile sursor none

--- a/css/components/_cursor.scss
+++ b/css/components/_cursor.scss
@@ -64,15 +64,15 @@
 }
 
 @media (max-width: 767.98px) {
-  // .cursor-wrap {
-  //   display: none;
-  // }
+  .cursor-wrap {
+    display: none;
+  }
 
-  // .cursor {
-  //   display: none;
-  // }
+  .cursor {
+    display: none;
+  }
 
-  // .ball {
-  //   display: none;
-  // }
+  .ball {
+    display: none;
+  }
 }
