--- a/css/main.css
+++ b/css/main.css
@@ -579,6 +579,18 @@ input {
           transform: translate(-50%, -50%) scale(0.9);
 }
 
+@media (max-width: 767.98px) {
+  .cursor-wrap {
+    display: none;
+  }
+  .cursor {
+    display: none;
+  }
+  .ball {
+    display: none;
+  }
+}
+
 .sliderBlock {
   width: 30%;
   margin-top: 100px;
