--- a/css/pages/_index.scss
+++ b/css/pages/_index.scss
@@ -202,13 +202,13 @@
   }
 
   .index-works-card {
-    margin: 0 auto;
+    margin: 40px auto;
     width: 90%;
   }
 
   .index-works-card.right,
   .index-works-card.left {
-    margin: 0 auto;
+    margin: 40px auto;
   }
 
   .arts-section {
