--- a/css/main.css
+++ b/css/main.css
@@ -1455,12 +1455,12 @@ input {
             justify-content: flex-start;
   }
   .index-works-card {
-    margin: 0 auto;
+    margin: 40px auto;
     width: 90%;
   }
   .index-works-card.right,
   .index-works-card.left {
-    margin: 0 auto;
+    margin: 40px auto;
   }
   .arts-section {
     margin-bottom: 40px;
