--- a/css/main.css
+++ b/css/main.css
@@ -1500,8 +1500,10 @@ input {
   }
   .art-l {
     width: 90%;
+    margin: 0 auto;
   }
   .art-r {
+    margin: 10px 0 100px 0;
     width: 100%;
   }
   .art-r h4 {
