--- a/css/pages/_index.scss
+++ b/css/pages/_index.scss
@@ -258,9 +258,11 @@
 
   .art-l {
     width: 90%;
+    margin: 0 auto;
   }
 
   .art-r {
+    margin: 10px 0 100px 0;
     width: 100%;
 
     h4 {
