--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -2,19 +2,25 @@
 .primary-color {
   color: $primary-color;
 }
+
 .secondary-color {
   color: $secondary-color;
 }
+
 .dark-color {
   color: $dark-color;
 }
+
 .bg-secondary {
   background: $secondary-color;
+
   &-dark {
     background: $secondary-color-dark;
   }
-//======= space ======= 
+
+  //======= space ======= 
 }
+
 $sp: 4px;
 $sp-64: $sp * 16;
 $sp-32: $sp * 8;
@@ -25,9 +31,11 @@ $sp-8: $sp * 2;
 .px-24 {
   padding: 0 $sp-24;
 }
+
 .mx--24 {
   margin: 0 -$sp-24;
 }
+
 //======= position ======= 
 @mixin absolute($top, $right, $bottom, $left) {
   position: absolute;
@@ -36,6 +44,7 @@ $sp-8: $sp * 2;
   bottom: $bottom;
   left: $left;
 }
+
 @mixin fixed($top, $right, $bottom, $left) {
   position: fixed;
   top: $top;
@@ -43,82 +52,105 @@ $sp-8: $sp * 2;
   bottom: $bottom;
   left: $left;
 }
+
 //======= width ======= 
 @mixin box-size($width, $heigh) {
   width: $width;
   height: $heigh;
 }
+
 .w-30 {
   width: 30%;
 }
+
 .w-35 {
   width: 35%;
 }
+
 .w-40 {
   width: 40%;
 }
+
 .w-45 {
   width: 45%;
 }
+
 .w-50 {
   width: 50%;
 }
+
 .w-60 {
   width: 60%;
 }
+
 .w-65 {
   width: 65%;
 }
+
 .w-70 {
   width: 70%;
 }
+
 .container {
   width: 80%;
   margin: 0 auto;
 }
+
 .w-100 {
   width: 100%;
 }
+
 //display
 .wrap-row {
   display: flex;
   flex-flow: row wrap;
 }
+
 .wrap-column {
   display: flex;
   flex-flow: column wrap;
 }
+
 //larger desktops
 @media (min-width: 1440.02px) {
   .container {
     max-width: 1500px;
   }
-};
+}
+
+;
 
 //large desktops
 @media (max-width: 1440px) {
   .container {
     max-width: 1100px;
   }
-};
+}
+
+;
 
 //landscape phones
 @media (max-width: 767.98px) {
   .container {
     width: calc(100% - 80px);
     margin: 0 auto;
-  }  //3欄 -> 2欄
+  }
+
+  //3欄 -> 2欄
   .wrap-row {
     .w-30 {
       width: 45%;
     }
-//portrait phones
+
+    //portrait phones
   }
 }
+
 @media (max-width: 575.98px) {
   .container {
     width: calc(100% - 40px);
   }
+
   .wrap-row {
     flex-flow: column wrap;
 
