--- a/css/layout/_menu.scss
+++ b/css/layout/_menu.scss
@@ -3,9 +3,7 @@
   width: 24px;
   height: 24px;
   position: relative;
-  right: 0;
-  /* transform: translate(-50%, -50%); */
-  z-index: 99;
+  left: -100%;
 }
 
 .hamburger1,
