--- a/css/main.css
+++ b/css/main.css
@@ -193,14 +193,6 @@ input {
   background: #EDDEDA;
 }
 
-.px-24 {
-  padding: 0 24px;
-}
-
-.mx--24 {
-  margin: -24px;
-}
-
 .w-30 {
   width: 30%;
 }
@@ -509,8 +501,6 @@ input {
   z-index: 30;
   overflow: hidden;
   pointer-events: none;
-  /* 寫在容器才會影響下面的 */
-  mix-blend-mode: difference;
 }
 
 .cursor {
@@ -798,9 +788,7 @@ input {
   width: 24px;
   height: 24px;
   position: relative;
-  right: 0;
-  /* transform: translate(-50%, -50%); */
-  z-index: 99;
+  left: -100%;
 }
 
 .hamburger1,
@@ -1177,7 +1165,7 @@ input {
   line-height: 1;
 }
 
-@media screen and (max-width: 767.98px) {
+@media (max-width: 767.98px) {
   .footer {
     padding: 30px 0px;
   }
