--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -17,8 +17,11 @@
   &-dark {
     background: $secondary-color-dark;
   }
+}
 
-  //======= space ======= 
+//======= space ======= 
+@mixin centerbox() {
+  margin: 0 auto;
 }
 
 $sp: 4px;
@@ -27,14 +30,6 @@ $sp-32: $sp * 8;
 $sp-24: $sp * 6;
 $sp-12: $sp * 3;
 $sp-8: $sp * 2;
-
-.px-24 {
-  padding: 0 $sp-24;
-}
-
-.mx--24 {
-  margin: 0 -$sp-24;
-}
 
 //======= position ======= 
 @mixin absolute($top, $right, $bottom, $left) {
@@ -57,6 +52,12 @@ $sp-8: $sp * 2;
 @mixin box-size($width, $heigh) {
   width: $width;
   height: $heigh;
+}
+
+@mixin flexcenter() {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .w-30 {
@@ -118,16 +119,12 @@ $sp-8: $sp * 2;
   }
 }
 
-;
-
 //large desktops
 @media (max-width: 1440px) {
   .container {
     max-width: 1100px;
   }
 }
-
-;
 
 //landscape phones
 @media (max-width: 767.98px) {
@@ -159,5 +156,13 @@ $sp-8: $sp * 2;
       width: 100%;
       margin: 40px auto;
     }
+  }
+}
+
+$m_breakpoint: 576px;
+
+@mixin m() {
+  @media (mex-width :$m_breakpoint) {
+    @content;
   }
 }
