--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -19,6 +19,7 @@
     letter-spacing: 2px;
   }
 }
+
 .ft-infobox {
   div {
     padding: 6px 0px;
@@ -26,6 +27,7 @@
     color: $dark-color;
   }
 }
+
 .brandbox {
   display: flex;
   flex-flow: column wrap;
@@ -52,7 +54,9 @@
       opacity: 0.3;
       animation: borderAnim-ft 3s ease-in infinite;
     }
+
     @keyframes borderAnim-ft {
+
       0%,
       100% {
         border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
@@ -75,6 +79,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+
   .ig {
     margin-left: 40px;
     margin-right: 15px;
@@ -87,7 +92,7 @@
   }
 }
 
-@media screen and (max-width: 767.98px) {
+@media (max-width: 767.98px) {
   .footer {
     padding: 30px 0px;
   }
